fix: 매 Ticker 마다 1000개 청크로 분할해서 비관적 락으로 처리하도록 수정